[gd_scene load_steps=3 format=3 uid="uid://bv2ki3joriy00"]

[ext_resource type="Script" path="res://addons/gddialog/ui/ui_dialog_editor/popup_edit/options/advanced/animations/ui_animation_row/ui-animation-row.gd" id="1_sydrr"]

[sub_resource type="ImageTexture" id="ImageTexture_fi0tx"]

[node name="UIAnimationRow" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
script = ExtResource("1_sydrr")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = " Portrait ID: "

[node name="SpinBoxPortraitID" type="SpinBox" parent="."]
layout_mode = 2
theme_override_icons/updown = SubResource("ImageTexture_fi0tx")
allow_greater = true
alignment = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Animation:"

[node name="LineEditAnimation" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonDeleteRow" type="Button" parent="."]
layout_mode = 2
text = " üóëÔ∏è "
